--- a/html/forms/input-type/input-type-submit.html
+++ b/html/forms/input-type/input-type-submit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>Input type submit</h2>
-    <form action="#">
+    <form action="#" method="get">
         <fieldset>
             <label for="fname">First Name: </label><br>
             <input type="text" id="fname" name="fname"><br>
