aplicado metodologia bem correta

--- a/bem/exemplo-4.html
+++ b/bem/exemplo-4.html
@@ -8,7 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+
     <form action="#" class="search-form">
+        <!-- correct -->
+        .search-form__content {}
+        .search-form__input {}
+        .search-form__button
+
+        <!-- incorrect -->
         <div class="search-form__content"></div>
         <div class="search-form__content__input"></div>
         <button class="search-form__content__button"></button>
